--- a/Taller 4 - Curso R.Rmd
+++ b/Taller 4 - Curso R.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Taller 4 - Curso R"
-author: "Yilmer Palacios"
+author: "Andrés Diaz - Yilmer Palacios"
 date: "2024-05-18"
 output: word_document
 ---
@@ -9,22 +9,70 @@ output: word_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+#### Cargamos librerías
+```{r include=FALSE}
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+rm(list = ls())
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+librerias <- (c("rvest", "purrr","writexl","readxl","sf", "haven", "dplyr"))
 
-```{r cars}
-summary(cars)
+if(length(setdiff(librerias, rownames(installed.packages()))) > 0){
+  install.packages(setdiff(librerias, rownames(installed.packages())))}
+invisible(sapply(librerias, require, character.only = TRUE,quietly = TRUE))
+
+
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+# Taller 4
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+## Punto 1
+
+### 1.1 Descarguen de la página del DANE el shapefile de municipios de Colombia. Cargue este shapefile a R utilizando la librería SF y elimine San Andrés y Providencia
+
+```{r}
+# Configuramos directorio
+dir <- getwd()
+setwd(dir)
+
+# Cargamos Shapefile
+
+sf_data <- st_read(dsn= "ShapeF")
+sf_data <- subset(sf_data, DPTO_CCDGO != 88)
+
+ggplot() + geom_sf(data = sf_data)
+
+```
+### 1.2 De la pagina del CEDE descargue el Panel de Características generales de los Municipios. Mantengan las variables que contienen la palabra “pob” y las variables del PIB.
+
+```{r}
+
+# Cargamos el panel de caracteristicas generales
+data <- read_dta("PANEL_CARACTERISTICAS_GENERALES(2022).dta") 
+
+# Mantemos solo las variables que contienen las palabras "pob", "pib" y el año.
+data2 <- data %>% select(contains("pob") | contains("pib") | starts_with("ano"))
+
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+### 1.3 Asignen como un nuevo dataframe de corte transversal los años 2007, 2008 y 2009 del Panel Municipal del CEDE.
+
+```{r}
+
+# Creamos un nuevo df solo con los años requeridos
+ndata <- filter(data, ano == c("2007", "2008", "2009"))
+
+# Corroboramos el filtro
+unique(ndata$ano)
+
+```
+### 1.4 Realicen un merge del shapefile de los municipios con cada uno de los nuevos dataframes y guárdenlos como objetos separados..
+
+```{r}
+
+
+
+```
+
+
