--- a/Taller 4 - Curso R.Rmd
+++ b/Taller 4 - Curso R.Rmd
@@ -40,7 +40,7 @@ setwd(dir)
 sf_data <- st_read(dsn= "ShapeF")
 sf_data <- subset(sf_data, DPTO_CCDGO != 88)
 
-ggplot() + geom_sf(data = sf_data)
+#ggplot() + geom_sf(data = sf_data)
 
 ```
 ### 1.2 De la pagina del CEDE descargue el Panel de Características generales de los Municipios. Mantengan las variables que contienen la palabra “pob” y las variables del PIB.
@@ -51,7 +51,15 @@ ggplot() + geom_sf(data = sf_data)
 data <- read_dta("PANEL_CARACTERISTICAS_GENERALES(2022).dta") 
 
 # Mantemos solo las variables que contienen las palabras "pob", "pib" y el año.
-data2 <- data %>% select(contains("pob") | contains("pib") | starts_with("ano"))
+data2 <- data %>% select(starts_with("ano") | starts_with("codmpio") | contains("pob") | contains("pib"))
+
+# En los datos del panel CEDE, los municipios pueden tener 4 o 5 cifras,
+# vamos a dejar los municipios de 4 cifras con un cero a la izquierda dejandolos con 5 cifras
+# para poder hacer el merge correctamente con el SF.
+data2$codmpio <- ifelse(data2$codmpio < 10000, paste0("0", data2$codmpio), as.character(data2$codmpio))
+
+# Cambianos el nombre de codmpio por MPIO_CDPMP para futuro merge
+data2 <- data2 %>% rename(MPIO_CDPMP = codmpio)
 
 
 ```
@@ -61,18 +69,22 @@ data2 <- data %>% select(contains("pob") | contains("pib") | starts_with("ano"))
 ```{r}
 
 # Creamos un nuevo df solo con los años requeridos
-ndata <- filter(data, ano == c("2007", "2008", "2009"))
-
-# Corroboramos el filtro
-unique(ndata$ano)
+ndata2007 <- filter(data2, ano == "2007")
+ndata2008 <- filter(data2, ano == "2008")
+ndata2009 <- filter(data2, ano == "2009")
 
 ```
 ### 1.4 Realicen un merge del shapefile de los municipios con cada uno de los nuevos dataframes y guárdenlos como objetos separados..
 
 ```{r}
 
-
+SF2007 <- left_join(ndata2007, sf_data, by = "MPIO_CDPMP")
+SF2008 <- left_join(ndata2008, sf_data, by = "MPIO_CDPMP")
+SF2009 <- left_join(ndata2009, sf_data, by = "MPIO_CDPMP")
 
 ```
+
+### 1.5 Realicen una visualización de un mapa a nivel municipal con la simbología de la población rural por municipio. Hagan este mapa interactivo usando la librería ggplotly.
+
 
 
